--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ HaMo Global Admissions specializes in university admissions, travel and student 
     event.preventDefault();
     let msg =
       'New Application%0A' +
-      'Name: ' + this.name.value + '%0A' +`
+      'Name: ' + this.name.value + '%0A' +
       'Phone: ' + this.phone.value + '%0A' +
       'Email: ' + this.email.value;
     window.open('https://wa.me/916359784774?text=' + encodeURIComponent(msg));
