--- a/index.html
+++ b/index.html
@@ -2,114 +2,122 @@
 <html lang="ar" dir="rtl">
 <head>
 <meta charset="UTF-8">
-<title>HaMo Global Admissions</title>
+
+<title>HaMo Global Admissions | Study & Travel in India</title>
+
+<meta name="description" content="HaMo Global Admissions شركة متخصصة في القبولات الجامعية والدراسة والسفر إلى الهند مع متابعة كاملة للطلاب.">
+<meta name="keywords" content="الدراسة في الهند, القبولات الجامعية, السفر إلى الهند, HaMo Global Admissions">
+<meta name="author" content="HaMo Global Admissions">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Segoe UI',Tahoma,sans-serif}
+
 body{
-  margin:0;
-  font-family:'Segoe UI',Tahoma;
-  background:linear-gradient(-45deg,#0f2027,#203a43,#2c5364,#8e2de2,#00c6ff);
-  background-size:500% 500%;
-  animation:bg 18s ease infinite;
-  color:#333;
+background:linear-gradient(-45deg,#0f2027,#203a43,#2c5364,#8e2de2,#00c6ff);
+background-size:500% 500%;
+animation:bg 18s ease infinite;
+color:#222
 }
 @keyframes bg{
-  0%{background-position:0% 50%}
-  50%{background-position:100% 50%}
-  100%{background-position:0% 50%}
+0%{background-position:0% 50%}
+50%{background-position:100% 50%}
+100%{background-position:0% 50%}
 }
 
 header{
-  text-align:center;
-  padding:80px 20px;
-  color:white;
-  background:rgba(0,0,0,0.55);
+text-align:center;
+padding:90px 20px;
+background:rgba(0,0,0,.65);
+color:#fff
 }
-
-/* ===== شعار واضح ===== */
 .logo{
-  width:120px;
-  height:120px;
-  margin:0 auto 20px;
-  border-radius:50%;
-  background:linear-gradient(135deg,#00c6ff,#8e2de2);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-size:40px;
-  font-weight:900;
-  color:white;
-  border:4px solid white;
-  box-shadow:0 10px 30px rgba(0,0,0,0.6);
+width:130px;height:130px;margin:0 auto 25px;
+border-radius:50%;
+background:linear-gradient(135deg,#00c6ff,#8e2de2);
+display:flex;align-items:center;justify-content:center;
+font-size:42px;font-weight:900;
+border:5px solid #fff;
+box-shadow:0 15px 40px rgba(0,0,0,.7)
 }
 
 nav{
-  text-align:center;
-  padding:15px;
-  background:rgba(0,0,0,0.65);
+position:sticky;top:0;z-index:999;
+background:rgba(0,0,0,.85);
+text-align:center;padding:15px
 }
 nav a{
-  color:white;
-  margin:0 15px;
-  text-decoration:none;
-  font-weight:600;
+color:#fff;text-decoration:none;
+margin:0 18px;font-weight:600
 }
 nav a:hover{color:#00c6ff}
 
 section{
-  max-width:1200px;
-  margin:60px auto;
-  background:rgba(255,255,255,0.96);
-  border-radius:22px;
-  padding:70px 8%;
+max-width:1200px;margin:80px auto;
+background:#fff;border-radius:30px;
+padding:80px 9%;
+box-shadow:0 20px 50px rgba(0,0,0,.2)
+}
+section h2{
+text-align:center;font-size:34px;
+margin-bottom:25px;color:#2c5364
 }
 
 .cards,.managers{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:30px;
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+gap:35px
+}
+.card{
+border-radius:22px;overflow:hidden;
+box-shadow:0 15px 35px rgba(0,0,0,.2);
+transition:.4s
+}
+.card:hover{transform:translateY(-12px)}
+.card img{width:100%;height:200px;object-fit:cover}
+.card-content{text-align:center;padding:28px;font-size:18px;font-weight:600}
+
+.apply-form{
+max-width:520px;margin:40px auto 0;
+display:flex;flex-direction:column;
+gap:18px;direction:rtl
+}
+.apply-form input{
+padding:16px 20px;
+border-radius:35px;border:1px solid #ccc
+}
+.apply-form button{
+padding:16px;border:none;
+border-radius:35px;
+background:linear-gradient(135deg,#25D366,#00c6ff);
+color:#fff;font-size:17px;font-weight:bold;
+cursor:pointer
 }
 
-.card,.manager{
-  background:white;
-  border-radius:18px;
-  box-shadow:0 12px 30px rgba(0,0,0,0.15);
-  overflow:hidden;
+.manager{
+text-align:center;padding:35px;
+border-radius:25px;
+box-shadow:0 15px 30px rgba(0,0,0,.15)
 }
-.card img{
-  width:100%;
-  height:190px;
-  object-fit:cover;
-}
-.card-content,.manager{padding:25px}
-
 .whatsapp-btn{
-  display:inline-block;
-  margin-top:12px;
-  background:#25D366;
-  color:white;
-  padding:10px 22px;
-  border-radius:30px;
-  text-decoration:none;
-  font-weight:bold;
+display:inline-block;margin-top:15px;
+padding:12px 26px;background:#25D366;
+color:#fff;border-radius:30px;
+text-decoration:none;font-weight:bold
 }
 
-.reveal{
-  opacity:0;
-  transform:translateY(60px);
-  transition:all 0.8s ease;
-}
-.reveal.active{
-  opacity:1;
-  transform:translateY(0);
-}
+.reveal{opacity:0;transform:translateY(70px);transition:.9s}
+.reveal.active{opacity:1;transform:none}
 
 footer{
-  text-align:center;
-  color:white;
-  padding:25px;
-  background:rgba(0,0,0,0.65);
+text-align:center;padding:30px;
+background:rgba(0,0,0,.85);
+color:#fff
+}
+
+@media(max-width:768px){
+section{padding:60px 6%}
+nav a{margin:0 10px}
 }
 </style>
 </head>
@@ -117,75 +125,78 @@ footer{
 <body>
 
 <header>
-  <div class="logo">HaMo</div>
-  <h1>HaMo Global Admissions</h1>
-  <p>Study & Travel in India | القبولات والسفر إلى الهند</p>
+<div class="logo">HaMo</div>
+<h1>HaMo Global Admissions</h1>
+<p>Study & Travel in India | القبولات الجامعية والسفر إلى الهند</p>
 </header>
 
 <nav>
-  <a href="#about">About</a>
-  <a href="#services">Services</a>
-  <a href="#apply">Apply</a>
-  <a href="#management">Management</a>
+<a href="#about">من نحن</a>
+<a href="#services">الخدمات</a>
+<a href="#apply">التقديم</a>
+<a href="#management">الإدارة</a>
 </nav>
 
 <section id="about" class="reveal">
-<h2>About Us | من نحن</h2>
+<h2>من نحن</h2>
 <p>
-HaMo Global Admissions specializes in university admissions, travel and student services in India.  
-نحن شركة متخصصة في القبولات الجامعية والسفر مع متابعة شاملة.
+HaMo Global Admissions شركة متخصصة في القبولات الجامعية والدراسة والسفر إلى الهند مع متابعة شاملة للطلاب.
 </p>
 </section>
 
 <section id="services" class="reveal">
-<h2>Our Services</h2>
+<h2>خدماتنا</h2>
 <div class="cards">
-
 <div class="card">
-<img src="https://images.unsplash.com/photo-1521791136064-7986c2920216">
-<div class="card-content">
-<h3>University Admissions</h3>
+<img src="https://images.unsplash.com/photo-1521791136064-7986c2920216" alt="University Admissions">
+<div class="card-content">القبولات الجامعية</div>
 </div>
-</div>
-
 <div class="card">
-<img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34">
-<div class="card-content">
-<h3>Travel & Tourism</h3>
+<img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34" alt="Travel to India">
+<div class="card-content">السفر والسياحة</div>
 </div>
-</div>
-
 <div class="card">
-<img src="https://images.unsplash.com/photo-1521791136064-7986c2920216">
-<div class="card-content">
-<h3>Visas</h3>
+<img src="https://images.unsplash.com/photo-1521791136064-7986c2920216" alt="Visa Services">
+<div class="card-content">التأشيرات</div>
 </div>
-</div>
-
 </div>
 </section>
 
 <section id="apply" class="reveal">
-    <section id="apply" class="reveal">
-  <h2>Application Form</h2>
-  <form onsubmit="
-    event.preventDefault();
-    let msg =
-      'New Application%0A' +
-      'Name: ' + this.name.value + '%0A' +
-      'Phone: ' + this.phone.value + '%0A' +
-      'Email: ' + this.email.value;
-    window.open('https://wa.me/916359784774?text=' + encodeURIComponent(msg));
-  ">
-    <input name="name" placeholder="Full Name" required>
-    <input name="phone" placeholder="Phone Number">
-    <input name="email" placeholder="Your Email" required>
-    <button type='submit'>Send via WhatsApp</button>
-  </form>
+<h2>نموذج التقديم</h2>
+
+<form class="apply-form" onsubmit="
+event.preventDefault();
+
+let name=this.name.value;
+let phone=this.phone.value;
+let email=this.email.value;
+
+let msg='طلب تقديم جديد\nالاسم: '+name+'\nالهاتف: '+phone+'\nإيميل الطالب: '+email;
+
+/* WhatsApp */
+window.open(
+'https://wa.me/916359784774?text='+encodeURIComponent(msg),
+'_blank'
+);
+
+/* Email */
+window.location.href=
+'mailto:haidara.al.hassan.0@gmail.com'
++'?subject='+encodeURIComponent('New Application - HaMo Global Admissions')
++'&body='+encodeURIComponent(msg);
+">
+
+<input type="text" name="name" placeholder="الاسم الكامل" required>
+<input type="tel" name="phone" placeholder="رقم الهاتف">
+<input type="email" name="email" placeholder="البريد الإلكتروني" required>
+
+<button type="submit">إرسال الطلب</button>
+</form>
 </section>
 
 <section id="management" class="reveal">
-<h2>Management</h2>
+<h2>الإدارة</h2>
 <div class="managers">
 
 <div class="manager">
@@ -209,11 +220,11 @@ HaMo Global Admissions specializes in university admissions, travel and student 
 
 <script>
 window.addEventListener('scroll',()=>{
-  document.querySelectorAll('.reveal').forEach(el=>{
-    if(el.getBoundingClientRect().top < window.innerHeight-100){
-      el.classList.add('active');
-    }
-  });
+document.querySelectorAll('.reveal').forEach(el=>{
+if(el.getBoundingClientRect().top < window.innerHeight-100){
+el.classList.add('active');
+}
+});
 });
 </script>
 
